# entropy-piano-tuner

./: .gitignore  CMakeLists.txt
.github/workflows/: doxygen-gh-pages.yml
cmake/: EptConfig.cmake
docs/: Doxyfile
src/: CMakeLists.txt
src/app/: CMakeLists.txt  displaysize.h  main.cpp  runguard.h  tunerapplication.cpp  tunerapplication.h  versioncheck.h
src/app/audio/: CMakeLists.txt  audiointerfaceforqt.cpp  audiointerfaceforqt.h  audioplayerforqt.cpp  audioplayerforqt.h  audiorecorderforqt.cpp  audiorecorderforqt.h
src/app/dialogs/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  autoclosingmessagebox.cpp  autoclosingmessagebox.h  donotshowagainmessagebox.h  initializedialog.cpp  initializedialog.h  simplefiledialog.cpp  simplefiledialog.h
src/app/dialogs/algorithmdialog/: algorithmdialog.cpp  algorithmdialog.h  algorithmdialogparameterupdatetimer.h
src/app/dialogs/editpianosheet/: editpianosheetdialog.cpp  editpianosheetdialog.h
src/app/dialogs/plotsdialog/: centralplotframe.cpp  centralplotframe.h  keyindexscaledraw.h  keyindexscaleengine.h  plotsdialog.cpp  plotsdialog.h
src/app/drawers/: CMakeLists.txt  fourierspectrumgraph.h  stroboscopicviewadapterforqt.cpp  stroboscopicviewadapterforqt.h  tuningcurvegraph.cpp  tuningcurvegraph.h  tuningindicatorview.cpp  tuningindicatorview.h
src/app/implementations/: CMakeLists.txt  filemanagerforqt.cpp  filemanagerforqt.h  graphicsitemforqt.cpp  graphicsitemforqt.h  graphicsviewadapterforqt.cpp  graphicsviewadapterforqt.h  platformtools.cpp  platformtools.h  projectmanagerforqt.cpp  projectmanagerforqt.h  qtxmlreader.cpp  qtxmlwriter.cpp  settingsforqt.h
src/app/keyboard/: autoscaledtokeyboardgraphicsview.cpp  autoscaledtokeyboardgraphicsview.h  fullscreenkeyboarddialog.h  graphicskeyitem.h  keyboardgraphicsview.cpp  keyboardgraphicsview.h
src/app/mainwindow/: CMakeLists.txt  calculationprogressgroup.h  mainwindow.cpp  mainwindow.h  progressdisplay.h  recordingqualitybar.cpp  recordingqualitybar.h  recordingstatusgraphicsview.cpp  recordingstatusgraphicsview.h  signalanalyzergroupbox.h  tuningindicatorgroupbox.h  volumecontrolgroupbox.h  volumecontrollevel.h
src/app/options/: CMakeLists.txt  optionscentralwidgetinterface.h  optionscontentswidgetinterface.h  optionsdialog.cpp  optionsdialog.h  optionstabcontentsvscrollarea.h  pagesavingtabwidget.h
src/app/options/audio/: optionspageaudio.cpp  optionspageaudio.h  optionspageaudioinputoutputpage.cpp  optionspageaudioinputoutputpage.h  optionspageaudiomidipage.cpp  optionspageaudiomidipage.h
src/app/options/environment/: optionspageenvironment.h  optionspageenvironmentgeneralpage.h  optionspageenvironmenttuningpage.h
src/app/piano/: CMakeLists.txt  pianofileiocsv.h  pianofileiointerface.h  pianofileioxml.cpp  pianofileioxml.h
src/app/widgets/: CMakeLists.txt  displaysizedependinggroupbox.h  doubleslider.h  preferredtextsizelabel.h  progressoverlay.h  verticalscrollarea.h
src/common/: CMakeLists.txt
src/common/algorithms/: CMakeLists.txt
src/common/algorithms/entropyminimizer/: CMakeLists.txt
src/common/algorithms/examplealgorithm/: CMakeLists.txt
src/common/algorithms/pitchraise/: CMakeLists.txt  pitchraise.cpp
src/common/algorithms/resettorecording/: CMakeLists.txt  resettorecording.cpp
src/common/config/: CMakeLists.txt  prerequisites.h
src/common/core/: CMakeLists.txt  core.h  prerequisites.h  settings.h
src/common/core/adapters/: calculationadapter.cpp  calculationadapter.h  coreinitialisationadapter.h  filemanager.cpp  filemanager.h  graphicsviewadapter.cpp  graphicsviewadapter.h  modeselectoradapter.cpp  modeselectoradapter.h  projectmanageradapter.cpp  projectmanageradapter.h  recorderlevel.cpp  recorderlevel.h  xmlfactory.h  xmlreaderinterface.h  xmlwriterinterface.h
src/common/core/analyzers/: fftanalyzer.cpp  fftanalyzer.h  fftanalyzererrorcodes.h  keyrecognizer.cpp  keyrecognizer.h  overpull.cpp  overpull.h  signalanalyzer.cpp  signalanalyzer.h
src/common/core/audio/: audiointerface.h  circularbuffer.h  pcmdevice.h
src/common/core/audio/midi/: midiadapter.cpp  midiadapter.h
src/common/core/audio/player/: soundgenerator.cpp  soundgenerator.h  synthesizer.cpp  synthesizer.h  waveformgenerator.cpp  waveformgenerator.h
src/common/core/audio/recorder/: audiorecorder.cpp  audiorecorder.h  recordingmanager.cpp  recordingmanager.h  stroboscope.cpp
src/common/core/calculation/: algorithm.cpp  algorithm.h  algorithmfactory.h  algorithmfactorydescription.h  algorithminformation.cpp  algorithminformation.h  algorithminformationparser.cpp  algorithmparameterdescription.h  algorithmparameters.h  calculationmanager.cpp  calculationmanager.h
src/common/core/drawers/: drawerbase.h  fourierspectrumgraphdrawer.cpp  fourierspectrumgraphdrawer.h  graphicsitem.h  tuningcurvegraphdrawer.cpp  tuningcurvegraphdrawer.h  tuningindicatordrawer.cpp  tuningindicatordrawer.h
src/common/core/math/: fftadapter.h  fftimplementation.cpp  fftimplementation.h  mathtools.cpp  mathtools.h
src/common/core/messages/: message.h  messagecaluclationprogress.h  messagefinalkey.h  messagehandler.h  messagekeydatachanged.h  messagekeyselectionchanged.h  messagelistener.h  messagemidievent.h  messagemodechanged.h  messagenewfftcalculated.h  messagestroboscope.h  messagetuningdeviation.h
src/common/core/piano/: key.cpp  key.h  keyboard.h  piano.cpp  piano.h  pianomanager.cpp  pianomanager.h
src/common/core/qtlegacy/: qlabel.hpp
src/common/core/system/: CMakeLists.txt  basecallback.h  eptexception.cpp  eptexception.h  log.h  platformtoolscore.h  serverinfo.h  simplethreadhandler.h  timer.cpp
